force-app/main/default/objects/My_Home_Products__c/My_Home_Products__c.object-meta.xml
<CustomObject>
    <description>My Home Products object contains Warranty and Product Information from LEAK.

マイホーム製品オブジェクトには、LEAKからの保証と製品情報が含まれています。</description>
    <label>マイホーム製品</label>
    <nameField>
        <displayFormat>MHP-{0000}</displayFormat>
        <label>マイホーム製品管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>