force-app/main/default/objects/My_Home_Products__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>説明</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>