force-app/main/default/objects/My_Home_Products__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Product Category
製品カテゴリー</description>
    <label>製品カテゴリー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>家庭のエネルギー管理</fullName>
            </value>
            <value>
                <fullName>ソーラーパネルの管理</fullName>
            </value>
            <value>
                <fullName>アプライアンスの管理</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>