force-app/main/default/objects/My_Home_Products__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product Name
製品名</description>
    <label>製品名</label>
    <length>150</length>
    <type>Text</type>
</CustomField>