force-app/main/default/objects/My_Home_Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>